<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetWeapon">


    <ToggleButton
        android:id="@+id/toggleFinesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelFinesse" />

    <ToggleButton
        android:id="@+id/toggleHanded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:text="ToggleButton"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelHanded" />

    <ToggleButton
        android:id="@+id/toggleMissile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelMissile" />

    <EditText
        android:id="@+id/txtWpnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/txtWpnName"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAttackMod"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/labelAttackMod"
        app:layout_constraintTop_toBottomOf="@+id/txtWpnName" />

    <EditText
        android:id="@+id/txtDamageMod"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/labelDamMod"
        app:layout_constraintTop_toBottomOf="@+id/txtAttackMod" />

    <EditText
        android:id="@+id/txtDieSize"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/labelDieSize"
        app:layout_constraintTop_toBottomOf="@+id/txtDamageMod" />

    <EditText
        android:id="@+id/txtDieAmount"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/labelDieAmt"
        app:layout_constraintTop_toBottomOf="@+id/txtDieSize" />

    <TextView
        android:id="@+id/labelFinesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txtFinesse"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWpnName" />

    <TextView
        android:id="@+id/labelHanded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtHanded"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleFinesse" />

    <TextView
        android:id="@+id/labelMissile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="3dp"
        android:text="@string/txtMissile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleHanded" />

    <TextView
        android:id="@+id/labelAttackMod"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/txtAtkMod"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWpnName" />

    <TextView
        android:id="@+id/labelDamMod"
        android:layout_width="115dp"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtDamMod"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAttackMod" />

    <TextView
        android:id="@+id/labelDieSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtDieSize"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDamMod" />

    <TextView
        android:id="@+id/labelDieAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/txtDieAmt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDieSize" />

    <Button
        android:id="@+id/btnWpnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="18dp"
        android:text="@string/btnUpdate"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDieAmount" />
</androidx.constraintlayout.widget.ConstraintLayout>